routes refactored and error codes altered
