# backend/services/api/internal/user/handler/user.go
@@ -5,6 +5,7 @@ import (
 	"api/internal/middleware"
 	"api/internal/user/domain"
 	"api/internal/user/usecase"
+	"errors"
 	"log/slog"
 	"net/http"
 
@@ -29,19 +30,9 @@ func RegisterRoutes(i do.Injector, r *gin.Engine) {
 	user := r.Group("/user", middleware.AuthMiddleware(domain.UserRole))
 	{
 		user.POST("/subscribe", h.Subscribe)
-		user.GET("/flights", h.ListFlights)
+		user.GET("/flight/list", h.ListFlights)
 	}
 }
-
-// пришла подписка -> записать в подписки -> записать в outbox событие для кафки
-// тоже самое если обновление полей полёта -> записать в outbox событие для кафки
-//
-// publisher читает неотправленные в outbox -> отправляет в кафку сообщение -> отмечает отправленным (в outbox'е)
-//
-// notifier получает сообщение из кафки -> отправляет сообщение об изменении/о вылете
-// notifier:
-// если подписка, то записывает в свою таблицу из которой читает worker и отправляет, когда надо
-// если обновление, то обновляет таблицу и отправляет сообщение об изменении
 
 // @Summary subscribe user (only user)
 // @Tags User
@@ -58,47 +49,33 @@ func (h *UserHandler) Subscribe(ctx *gin.Context) {
 	uidStr := ctx.GetString("user_id")
 	uid, err := uuid.Parse(uidStr)
 	if err != nil {
-		slog.Error(op, "err", err)
-		ctx.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-			"msg": "unauthorized",
-		})
+		slog.Warn(op, "err", err)
+		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"msg": "user not found"})
 		return
 	}
 
 	fidStr := ctx.Query("flight_id")
 	fid, err := uuid.Parse(fidStr)
 	if err != nil {
-		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{
-			"msg": "flight not found",
-		})
+		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"msg": "flight not found"})
 		return
 	}
-
-	slog.Debug(op, "uid", uid, "fid", fid)
 
 	if err := h.uc.Subscribe(uid, fid); err != nil {
-		switch err {
-		case usecase.ErrUserNotFound:
-			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{
-				"msg": "user not found",
-			})
-			return
-		case usecase.ErrFlightNotFound:
-			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{
-				"msg": "flight not found",
-			})
+		if errors.Is(err, usecase.ErrUserNotFound) {
+			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"msg": "user not found"})
 			return
 		}
-		slog.Warn(op, "err", err)
-		ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"msg": "internal error",
-		})
+		if errors.Is(err, usecase.ErrFlightNotFound) {
+			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"msg": "flight not found"})
+			return
+		}
+		slog.Error(op, "err", err)
+		ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"msg": "internal error"})
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{
-		"msg": "user subscribed",
-	})
+	ctx.JSON(http.StatusOK, gin.H{"msg": "user subscribed"})
 }
 
 // @Summary list flights (only user)
@@ -107,39 +84,27 @@ func (h *UserHandler) Subscribe(ctx *gin.Context) {
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Success 200
-// @Failure 400
+// @Success 200 {object} dto.ListFlightsResponse
 // @Failure 401
-// @Router /user/flights [get]
+// @Failure 500
+// @Router /user/flight/list [get]
 func (h *UserHandler) ListFlights(ctx *gin.Context) {
 	const op = "UserHandler.ListFlights"
 	uidStr := ctx.GetString("user_id")
 	uid, err := uuid.Parse(uidStr)
 	if err != nil {
 		slog.Error(op, "err", err)
-		ctx.JSON(http.StatusUnauthorized, gin.H{
-			"msg": "unauthorized",
-		})
+		ctx.JSON(http.StatusNotFound, gin.H{"msg": "user not found"})
 		return
 	}
 
 	flights, err := h.uc.ListFlights(uid)
 	if err != nil {
-		slog.Warn(op, "err", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"msg": "internal error",
-		})
+		slog.Error(op, "err", err)
+		ctx.JSON(http.StatusInternalServerError, gin.H{"msg": "internal error"})
 		return
 	}
 
-	resp, err := dto.ToResponseListFlights(flights)
-	if err != nil {
-		slog.Warn(op, "err", err)
-		ctx.JSON(http.StatusInternalServerError, gin.H{
-			"msg": "internal error",
-		})
-		return
-	}
-
+	resp := dto.ToResponseListFlights(flights)
 	ctx.JSON(http.StatusOK, resp)
 }
